tests/types_first_function_statics4/types_first_function_statics4.exp
Error --------------------------------------------------------------------------------------------------------- b.js:6:2

Cannot cast `foo.x` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   b.js:6:2
   6| (foo.x: string);
       ^^^^^

References:
   a.js:2:9
   2| foo.x = 1;
              ^ [1]
   b.js:6:9
   6| (foo.x: string);
              ^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------------- b.js:7:6

Cannot get `foo.other` because property `other` is missing in statics of function [1]. [prop-missing]

   b.js:7:6
   7| (foo.other: number);
           ^^^^^

References:
   a.js:1:1
   1| function foo() {}
      ^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------------- b.js:11:2

Cannot cast `bar.x` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   b.js:11:2
   11| (bar.x: string);
        ^^^^^

References:
   a.js:5:9
    5| bar.x = 1;
               ^ [1]
   b.js:11:9
   11| (bar.x: string);
               ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:12:6

Cannot get `bar.other` because property `other` is missing in statics of function [1]. [prop-missing]

   b.js:12:6
   12| (bar.other: number);
            ^^^^^

References:
   a.js:4:13
    4| const bar = () => {};
                   ^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------------- b.js:15:2

Cannot create `FooComponent` element because property `other` is missing in `Props` [1] but exists in props [2].
[prop-missing]

   b.js:15:2
   15| <FooComponent other={1}/>;
        ^^^^^^^^^^^^

References:
   a.js:17:30
   17| function FooComponent(props: Props): React.Node { return <div />; }
                                    ^^^^^ [1]
   b.js:15:1
   15| <FooComponent other={1}/>;
       ^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:18:2

Cannot create `BarComponent` element because property `other` is missing in `Props` [1] but exists in props [2].
[prop-missing]

   b.js:18:2
   18| <BarComponent other={1}/>;
        ^^^^^^^^^^^^

References:
   a.js:20:30
   20| const BarComponent = (props: Props): React.Node => <div />;
                                    ^^^^^ [1]
   b.js:18:1
   18| <BarComponent other={1}/>;
       ^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:30:2

Cannot cast `poly_foo.x` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   b.js:30:2
   30| (poly_foo.x: string);
        ^^^^^^^^^^

References:
   poly_a.js:2:9
    2| foo.x = 1;
               ^ [1]
   b.js:30:14
   30| (poly_foo.x: string);
                    ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------- b.js:31:11

Cannot get `poly_foo.other` because property `other` is missing in statics of function [1]. [prop-missing]

   b.js:31:11
   31| (poly_foo.other: number);
                 ^^^^^

References:
   poly_a.js:1:1
    1| function foo<T>() {}
       ^^^^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------------- b.js:36:2

Cannot cast `poly_bar.x` to string because number [1] is incompatible with string [2]. [incompatible-cast]

   b.js:36:2
   36| (poly_bar.x: string);
        ^^^^^^^^^^

References:
   poly_a.js:5:9
    5| bar.x = 1;
               ^ [1]
   b.js:36:14
   36| (poly_bar.x: string);
                    ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------- b.js:37:11

Cannot get `poly_bar.other` because property `other` is missing in statics of function [1]. [prop-missing]

   b.js:37:11
   37| (poly_bar.other: number);
                 ^^^^^

References:
   poly_a.js:4:13
    4| const bar = <T>() => {};
                   ^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------------------------- b.js:40:2

Cannot create `PolyFooComponent` element because property `other` is missing in `Props` [1] but exists in props [2].
[prop-missing]

   b.js:40:2
   40| <PolyFooComponent t={0} other={1}/>;
        ^^^^^^^^^^^^^^^^

References:
   poly_a.js:18:33
   18| function FooComponent<T>(props: Props<T>): React.Node { return <div />; }
                                       ^^^^^^^^ [1]
   b.js:40:1
   40| <PolyFooComponent t={0} other={1}/>;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------------- b.js:43:2

Cannot create `PolyBarComponent` element because property `other` is missing in `Props` [1] but exists in props [2].
[prop-missing]

   b.js:43:2
   43| <PolyBarComponent t={0} other={1}/>;
        ^^^^^^^^^^^^^^^^

References:
   poly_a.js:21:33
   21| const BarComponent = <T>(props: Props<T>): React.Node => <div />;
                                       ^^^^^^^^ [1]
   b.js:43:1
   43| <PolyBarComponent t={0} other={1}/>;
       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]



Found 12 errors
